...
  "@@locale": "en",
  "@@last_modified": "2026-01-10",

  "appName": "Kundali",
  "@appName": {"description": "Application name"},

  "common_save": "Save",
  "common_cancel": "Cancel",
  "common_delete": "Delete",
  "common_share": "Share",
  "common_download": "Download",
  "common_loading": "Loading...",
  "common_error": "Error",
...
  "common_apply": "Apply",
  "common_search": "Search",
  "common_settings": "Settings",
  "insight_whatThisMeans": "What This Means",
  "insight_significance": "Significance",
  "insight_keyPoints": "Key Points",
  "common_language": "Language",
  "common_theme": "Theme",
  "common_logout": "Logout",
  "common_login": "Login",
  "common_signup": "Sign Up",

  "nav_home": "Home",
  "nav_horoscope": "Horoscope",
  "nav_panchang": "Panchang",
  "nav_chat": "Chat",
  "nav_profile": "Profile",

  "display_tab_chart": "Chart",
  "display_tab_details": "Details",
  "display_tab_planets": "Planets",
  "display_tab_houses": "Houses",
  "display_tab_dasha": "Dasha",
  "display_tab_yogas": "Yogas",
  "display_tab_transit": "Transit",
  "display_tab_panchang": "Panchang",
  "display_tab_strength": "Strength",

  "display_menu_exportPdf": "Export PDF",
  "display_menu_setAsPrimary": "Set as Primary",
  "display_menu_duplicate": "Duplicate",
  "display_menu_delete": "Delete",
  "display_menu_language": "Language",

  "display_viewChartFor": "View Chart For",
  "display_date": "Date",
  "display_time": "Time",
  "display_viewCurrentTimeChart": "View Current Time Chart",
  "display_chartTypes": "Chart Types",
  "display_divisionalCharts": "Divisional Charts",
  "display_chartStyle": "Chart Style",
  "display_northIndian": "North Indian",
  "display_southIndian": "South Indian",
  "display_fullscreen": "Fullscreen",
  "display_zoomIn": "Zoom In",
  "display_zoomOut": "Zoom Out",
  "display_selectChartType": "Select Chart Type",
  "display_learnMore": "Learn More",

  "chart_lagna": "Lagna",
  "chart_moon": "Moon",
  "chart_sun": "Sun",
  "chart_bhava": "Bhava",
  "chart_hora": "Hora",
  "chart_drekkana": "Drekkana",
  "chart_chaturthamsa": "Chaturthamsa",
  "chart_saptamsa": "Saptamsa",
  "chart_navamsa": "Navamsa",
...
  "input_name": "Name",
  "input_namePlaceholder": "Enter name",
  "input_dateOfBirth": "Date of Birth",
  "input_timeOfBirth": "Time of Birth",
  "input_placeOfBirth": "Place of Birth",
  "input_placePlaceholder": "Enter city name",
  "input_gender": "Gender",
  "input_male": "Male",
  "input_female": "Female",
  "input_other": "Other",
  "input_generateKundali": "Generate Kundali",
  "input_saveAndView": "Save & View",
  "input_advancedOptions": "Advanced Options",
  "input_chartStyle": "Chart Style",
  "input_timezone": "Timezone",
  "input_setPrimary": "Set as Primary",
  "input_validationNameRequired": "Name is required",
...
  "input_popularCities": "Popular Cities",
  "input_noResultsFound": "No results found",
  "input_generating": "Generating Kundali...",

  "planet_sun": "Sun",
  "planet_moon": "Moon",
  "planet_mars": "Mars",
  "planet_mercury": "Mercury",
  "planet_jupiter": "Jupiter",
  "planet_venus": "Venus",
  "planet_saturn": "Saturn",
  "planet_rahu": "Rahu",
  "planet_ketu": "Ketu",
...

  "planets_overview": "Planets Overview",
  "planets_position": "Position",
  "planets_degree": "Degree",
  "planets_sign": "Sign",
  "planets_house": "House",
  "planets_nakshatra": "Nakshatra",
  "planets_retrograde": "Retrograde",
  "planets_combust": "Combust",
  "planets_exalted": "Exalted",
  "planets_debilitated": "Debilitated",
  "planets_ownSign": "Own Sign",
  "planets_friendly": "Friendly",
...
  "panchang_gulika": "Gulika Kalam",
  "panchang_abhijit": "Abhijit Muhurta",
  "panchang_auspicious": "Auspicious Times",
  "panchang_inauspicious": "Inauspicious Times",
  "panchang_moonPhase": "Moon Phase",

  "details_birthDetails": "Birth Details",
  "details_birthDate": "Birth Date",
  "details_birthTime": "Birth Time",
  "details_birthPlace": "Birth Place",
  "details_latitude": "Latitude",
  "details_longitude": "Longitude",
  "details_timezone": "Timezone",
  "details_ascendant": "Ascendant",
  "details_moonSign": "Moon Sign",
  "details_sunSign": "Sun Sign",
  "details_birthNakshatra": "Birth Nakshatra",
  "details_pada": "Pada",
  "details_varna": "Varna",
  "details_vashya": "Vashya",
  "details_yoni": "Yoni",
  "details_gan": "Gan",
...
