...
                            label: 'Name',
                            hint: 'Enter name',
                            icon: CupertinoIcons.person,
                            isDarkMode: isDarkMode,
                            validator: (value) {
                              if (value == null || value.isEmpty) {
                                return 'Please enter a name';
                              }
                              return null;
                            },
                          ),
                        ),

...
